--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,8 +7,12 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/navbar.css"/>
+    <link rel="stylesheet" href="/css/style.css"/>
 </head>
 <body>
+<div th:replace="navbar :: navbar"></div>
+<div class="container text-center">
 
 <div class ="container">
     <div class = "row">
@@ -16,7 +20,7 @@
     </div>
     <div class = "row">
         <div class = "col-lg-3">
-            <a th:href = "@{/team/new}" class = "btn btn-primary btn-sm mb-3">Add Team</a>
+            <a th:href = "@{/team/new}" class = "btn btn-secondary btn-lg mb-3">Add Team</a>
 
         </div>
     </div>
@@ -24,15 +28,15 @@
     <table class = "table table-striped table-bordered">
         <thead class = "table-dark">
         <tr>
-            <th> Team #</th>
+
             <th> Team Name</th>
+            <th> Action</th>
 
         </tr>
         </thead>
 
         <tbody>
         <tr th:each = "team: ${index}">
-            <td th:text = "${team.id}"></td>
             <td th:text= "${team.name}"></td>
             <td>
                 <a th:href = "@{/team/edit/{id}(id=${team.id})}"
