--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,8 +7,11 @@
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/navbar.css"/>
+  <script src="script.js" defer></script>
 </head>
 <body>
+<div th:replace="navbar :: navbar"></div>
 <div class="container text-center">
   <div>
     <h1>User Registration - Sign Up</h1>
@@ -26,7 +29,15 @@
       <div class="form-group row">
         <label class="col-4 col-form-label">Password: </label>
         <div class="col-8">
-          <input type="password" th:field="*{password}" class="form-control"
+          <input type="password" th:field="*{password}" class="form-control" id="password"
+                 required minlength="3" maxlength="10"/>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label class="col-4 col-form-label">Validate Password: </label>
+        <div class="col-8">
+          <input type="password" class="form-control" id="validatepassword"
                  required minlength="3" maxlength="10"/>
         </div>
       </div>
@@ -39,10 +50,12 @@
         </div>
       </div>
       <div>
-        <button type="submit" class="btn btn-primary">Sign Up</button>
+        <button type="submit" class="button">Sign Up</button>
       </div>
     </div>
   </form>
 </div>
 </body>
+
+
 </html>
