--- a/src/main/resources/templates/create_team.html
+++ b/src/main/resources/templates/create_team.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/style.css"/>
 </head>
 <body>
-<div th:replace="navbar :: navbar"></div>
+<div th:replace="navbar_create_team :: navbar"></div>
     <div class = "container">
         <div class = "row">
             <div class = "col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
